--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "filp/whoops": "^2.1",
         "laravel/framework": "5.3.*",
         "laravelcollective/html": "^5.3.0",
         "yajra/laravel-datatables-oracle": "~6.0"
