--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "filp/whoops": "^2.1",
         "laravel/framework": "5.3.*",
         "laravelcollective/html": "^5.3.0",
-        "yajra/laravel-datatables-oracle": "~6.0"
+        "yajra/laravel-datatables-oracle": "~6.0",
+        "cartalyst/sentinel": "2.0.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
