--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravelcollective/html": "^5.3.0",
         "yajra/laravel-datatables-oracle": "~6.0",
         "cartalyst/sentinel": "2.0.*",
-        "guzzlehttp/guzzle": "~6.0"
+        "guzzlehttp/guzzle": "~6.0",
+        "maatwebsite/excel": "~2.1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
